# hypermind-examples

./: .gitignore  100_PERCENT_MILESTONE.md  ACCEPTANCE_CRITERIA.md  AUTONOMOUS_SHIP_COMPLETE.md  BOSTON_REALESTATE.md  BRAIN_FRAUD_UNDERWRITING.md  CHANGELOG.md  CLAUDE.md  COMPLETE_TEST_COVERAGE_REPORT.md  COMPREHENSIVE_JENA_TEST_MIGRATION_PLAN.md  CUSTOMER_ANNOUNCEMENT.md  CUSTOMER_GUIDE.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  DIGITAL_TWIN.md  DOCS_ORGANIZATION.md  DOCUMENTATION_ORGANIZATION_COMPLETE.md  EUROLEAGUE_ANALYTICS.md  FEATURE_VERIFICATION_REPORT.md  FEDERATION_SETUP.md  GOOD_MORNING.md  HYPERGRAPH_TESTS_COMPLETE.md  HYPERGRAPH_TEST_PLAN.md  HYPERGRAPH_TEST_SUMMARY.md  IOS_APP_REDESIGN_PLAN.md  LEGAL_CASE.md  MORNING_REPORT.md  MUSIC_RECOMMENDATION.md  Makefile  Makefile.sdk  NOM_PARSER_SUCCESS.md  OVERNIGHT_SDK_COMPLETION_REPORT.md  OVERNIGHT_WORK_PLAN.md  PHASE_2_PROGRESS.md  PUBLISHING_GUIDE.md  PYPI_UPLOAD_GUIDE.md  QUICK_START_v0.1.3.md  README.md  RELEASE_AUTOMATION_SUMMARY.md  RELEASE_ROADMAP_SUMMARY.md  (+33 more)
crates/cluster/: Cargo.toml
crates/cluster/src/: config.rs  consistent_hash.rs  error.rs  hdrf.rs  lib.rs  node.rs  partition.rs
crates/cluster/tests/: parallel_execution_tests.rs  query_plan_tests.rs  sharding_tests.rs
crates/datalog/: Cargo.toml
crates/datalog/src/: lib.rs  sparse_matrix.rs
crates/datalog/tests/: comprehensive_datalog_tests.rs  comprehensive_datalog_tests.rs.backup
crates/hypergraph/: Cargo.toml
crates/hypergraph/benches/: hypergraph_benchmark.rs
crates/hypergraph/src/: lib.rs
crates/hypergraph/tests/: basic_operations.rs  edge_cases.rs  integration_test.rs  multi_node_connections.rs  pattern_matching.rs  rdf_integration.rs  statistics_metadata.rs  subgraph_extraction.rs  traits.rs  traversal.rs
crates/mobile-app-generator/: Cargo.toml
crates/mobile-app-generator/src/: error.rs  lib.rs
crates/mobile-app-generator/src/generator/: kotlin.rs  mod.rs  swift.rs  templates.rs
crates/mobile-app-generator/src/model/: architecture.rs  mod.rs
crates/mobile-app-generator/src/parser/: mapper.rs  mod.rs  ontology.rs  ttl.rs  validation.rs
crates/mobile-app-generator/tests/: generate_production_apps.rs  test_swift_generation.rs
crates/mobile-ffi/: Cargo.toml  build.rs
crates/mobile-ffi/src/: gonnect.udl  lib.rs
crates/mobile-ffi/tests/: from_clause_integration.rs  graphdb_admin_integration.rs  query_templates_test.rs
crates/prov/: Cargo.toml
crates/prov/src/: lib.rs  types.rs
crates/rdf-io/: Cargo.toml
crates/rdf-io/src/: lib.rs  nquads.rs  ntriples.pest  ntriples.rs  turtle.ebnf  turtle.pest  turtle.rs
crates/rdf-io/tests/: multi_format_tests.rs  rdf12_conformance.rs  serializer_tests.rs  turtle_semicolon_regression.rs
crates/rdf-model/: Cargo.toml
crates/rdf-model/src/: dictionary.rs  lib.rs  node.rs  quad.rs  triple.rs  vocab.rs
crates/rdf-model/tests/: jena_compatibility.rs
crates/reasoning/: Cargo.toml
crates/reasoning/src/: lib.rs  owl2.rs  rdfs.rs  rete.rs  transitive.rs
crates/reasoning/tests/: sparql_reasoning_tests.rs
crates/sdk/: Cargo.toml
crates/sdk/benches/: sdk_benchmarks.rs
crates/sdk/examples/: quickstart.rs
crates/sdk/src/: error.rs  graphdb.rs  lib.rs  node.rs  query_builder.rs
crates/sdk/tests/: hypergraph_tests.rs  sparql_queries.rs
crates/shacl/: Cargo.toml
crates/shacl/src/: lib.rs  shapes.rs  validator.rs
crates/sparql/: Cargo.toml  EXECUTOR_IMPLEMENTATION_SUMMARY.md  QUICK_FIX_GUIDE.md
crates/sparql/benches/: lubm_wcoj_benchmark.rs  lubm_wcoj_benchmark.rs.bak  sp2bench_benchmark.rs
crates/sparql/src/: algebra.rs  bindings.rs  executor.rs  lib.rs  optimizer.rs  parser.rs  sparql.pest  variable_ordering.rs
crates/sparql/tests/: from_clause_end_to_end.rs  jena_compatibility.rs  optimizer_integration.rs  real_benchmark.rs.disabled  wcoj_end_to_end.rs
crates/storage/: Cargo.toml
crates/storage/benches/: simd_benchmark.rs  triple_store_benchmark.rs
crates/storage/src/: backend.rs  indexes.rs  inmemory.rs  lib.rs  lmdb_backend.rs  observability.rs  pattern.rs  quad_store.rs  rocksdb_backend.rs  simd.rs  simd_encode.rs  transaction.rs
crates/storage/tests/: rocksdb_comprehensive_tests.rs  simd_tests.rs
crates/wcoj/: Cargo.toml
crates/wcoj/src/: leapfrog.rs  lib.rs  trie.rs
data/: boston-properties.ttl  (+6 more)
sdks/python/: IMPLEMENTATION_GUIDE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
sdks/python/rust_kgdb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdks/python/rust_kgdb_py/: __init__.py
sdks/python/tests/: test_regression.py
self-driving-car/: .gitignore  BLOG_POST.md  CLAUDE.md  COMPETITIVE_ANALYSIS.txt  Cargo.toml  DATALOG_CODE_IMPLEMENTATION.txt  DATALOG_EXECUTION_FLOW.txt  DATALOG_VISUAL_FLOW.txt  DEMO_ANIMATED_WITH_REAL_SPARQL.html  DEMO_FINAL_1764165585.html  DEMO_REAL_API_INTEGRATED.html  DEMO_REAL_SPARQL_INTEGRATED.html  DEMO_RUST_KGDB.html  DEMO_SCENARIOS.md  DEMO_STATUS.md  HYPERGRAPH_REASONING_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_STATUS.md  Makefile  README.md  RUST_KGDB_HTTP_SERVER_COMPLETE.md  RUST_KGDB_INTEGRATION_STATUS.md  SELF_DRIVING_REASONING_SPEC.md  SPARQL_QUERY_ANALYSIS.md  SYSTEM_REQUIREMENTS.md  TURTLE_PARSER_LIMITATION.md  convert_turtle_to_ntriples.py  package-lock.json  package.json  tsconfig.json  typescript_backend.ts
self-driving-car/av-cli-standalone/: Cargo.toml
self-driving-car/av-cli-standalone/src/: main.rs  server.rs
self-driving-car/av-hypergraph-demo/: Cargo.toml
self-driving-car/av-wasm/: Cargo.toml  README.md  requirements.txt  server.py  test_api.py
self-driving-car/av-wasm/.cargo/: config.toml
self-driving-car/av-wasm/data/: scenario1_traffic_light.ttl  scenario2_pedestrian.ttl  scenario3_school_zone.ttl
self-driving-car/av-wasm/src/: cli.rs  lib.rs  server.rs  server_simple.rs
self-driving-car/crates/av-ontology/: Cargo.toml
self-driving-car/crates/av-reasoning/: Cargo.toml
self-driving-car/crates/av-simulation/: Cargo.toml
self-driving-car/crates/simulator-bridge/: Cargo.toml
self-driving-car/crates/web-dashboard/: Cargo.toml
(+401 files in other folders)
