[workspace]
members = [
    "crates/av-ontology",
    "crates/av-reasoning",
    "crates/simulator-bridge",
    "crates/av-simulation",
    "crates/web-dashboard",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Gaurav Malhotra"]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.91"

[workspace.dependencies]
# rust-kgdb dependencies (use parent directory, NOT copied)
rdf-model = { path = "../crates/rdf-model" }
storage = { path = "../crates/storage", default-features = false }
sparql = { path = "../crates/sparql" }
hypergraph = { path = "../crates/hypergraph" }
rdf-io = { path = "../crates/rdf-io" }

# Common dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Web server (for dashboard)
actix-web = "4.4"
actix-files = "0.6"
actix-cors = "0.7"

# Simulator integration
socketio = "0.4"
reqwest = { version = "0.11", features = ["json"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1  # Faster compilation for development
