[package]
name = "mobile-app-generator"
version = "0.1.9"
edition = "2021"
authors = ["Mobile KG Engine Team"]
description = "Dynamic iOS/Android app generator from universal-meta-mobile-ontology.ttl"

[dependencies]
# Workspace crates
rdf-model = { path = "../rdf-model" }
rdf-io = { path = "../rdf-io" }
sparql = { path = "../sparql" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Templating for code generation
tera = "1.19"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"

[[bin]]
name = "generate-mobile-app"
path = "src/bin/main.rs"

[[bin]]
name = "generate_app"
path = "src/bin/generate_app.rs"
