[package]
name = "reasoning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "RDFS, OWL 2, and custom reasoning engines"

[dependencies]
rdf-model = { path = "../rdf-model" }
hypergraph = { path = "../hypergraph" }
storage = { path = "../storage" }
sparql = { path = "../sparql" }
parking_lot = { workspace = true }
smallvec = { workspace = true }
ahash = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[features]
default = ["rdfs"]
rdfs = []
owl2-rl = []
owl2-el = []
owl2-ql = []
swrl = []
all-reasoners = ["rdfs", "owl2-rl", "owl2-el", "owl2-ql", "swrl"]
