[package]
name = "sparql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Complete SPARQL 1.1 parser, optimizer, and executor"

[dependencies]
rdf-model = { path = "../rdf-model" }
hypergraph = { path = "../hypergraph" }
storage = { path = "../storage" }
wcoj = { path = "../wcoj" }
parking_lot = { workspace = true }
smallvec = { workspace = true }
ahash = { workspace = true }
rustc-hash = { workspace = true }
bumpalo = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = "1.10"  # Parallel execution for WCOJ (v0.1.8 SIMD+PGO)

# Parsing
pest = { workspace = true }
pest_derive = { workspace = true }
logos = { workspace = true }

# Builtin functions
regex = "1.10"
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }
urlencoding = "2.1"

# Hash functions
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = "3.8"

[[bench]]
name = "lubm_wcoj_benchmark"
harness = false

[[bench]]
name = "sp2bench_benchmark"
harness = false
