[package]
name = "wcoj"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Worst-Case Optimal Join (WCOJ) algorithms - LeapFrog TrieJoin implementation"

[dependencies]
rdf-model = { path = "../rdf-model" }
storage = { path = "../storage" }
parking_lot = { workspace = true }
smallvec = { workspace = true }
ahash = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
