[package]
name = "av-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# rust-kgdb core crates
rdf-model = { path = "../../crates/rdf-model" }
storage = { path = "../../crates/storage", features = ["in-memory"] }
sparql = { path = "../../crates/sparql" }
datalog = { path = "../../crates/datalog" }
rdf-io = { path = "../../crates/rdf-io" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
parking_lot = "0.12"
once_cell = "1.20"

# HTTP server (optional, for av-server binary)
hyper = { version = "0.14", features = ["server", "http1", "tcp"], optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }

[features]
default = []
server = ["hyper", "tokio"]

[[bin]]
name = "av-cli"
path = "src/main.rs"

[[bin]]
name = "av-server"
path = "src/server.rs"
required-features = ["server"]
