[package]
name = "av-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
required-features = ["wasm"]

[[bin]]
name = "av-server"
path = "src/server_simple.rs"

[[bin]]
name = "av-cli"
path = "src/cli.rs"

[dependencies]
# rust-kgdb core crates (one level up)
rdf-model = { path = "../../crates/rdf-model" }
storage = { path = "../../crates/storage", features = ["in-memory"] }
sparql = { path = "../../crates/sparql" }
datalog = { path = "../../crates/datalog" }
rdf-io = { path = "../../crates/rdf-io" }

# WASM bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Simple HTTP server (ZERO async, NO mio!)
tiny_http = { version = "0.12", optional = true }
parking_lot = "0.12"
once_cell = "1.20"

# Fix uuid feature requirements (needed by tiny_http)
uuid = { version = "1.0", default-features = false }

# WASM-specific dependencies (only for wasm32 target)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
server = ["tiny_http"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys", "console_error_panic_hook", "serde-wasm-bindgen"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
