[package]
name = "av-reasoning"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# rust-kgdb dependencies
rdf-model.workspace = true
storage.workspace = true
sparql.workspace = true
hypergraph.workspace = true

# Local dependencies
av-ontology = { path = "../av-ontology" }

# External dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
