[package]
name = "av-simulation"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "av-sim"
path = "src/main.rs"

[dependencies]
# Local dependencies
av-ontology = { path = "../av-ontology" }
av-reasoning = { path = "../av-reasoning" }
simulator-bridge = { path = "../simulator-bridge" }

# External dependencies
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
chrono.workspace = true
clap = { version = "4.4", features = ["derive"] }
