[package]
name = "simulator-bridge"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Local dependencies
av-reasoning = { path = "../av-reasoning" }

# External dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

# HTTP client for Unity simulator (Socket.IO will be added later)
reqwest = { version = "0.11", features = ["json"] }
