[package]
name = "web-dashboard"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dashboard-server"
path = "src/main.rs"

[dependencies]
# Local dependencies
av-reasoning = { path = "../av-reasoning" }
simulator-bridge = { path = "../simulator-bridge" }

# Web server
actix-web.workspace = true
actix-files = "0.6"
actix-cors = "0.7"

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
