[package]
name = "rust-kgdb-napi"
version = "0.1.3"
edition = "2021"
authors = ["Gonnect Team"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS for Node.js bindings
napi = "2.16"
napi-derive = "2.16"

# Internal dependencies
rdf-model = { path = "../../../../crates/rdf-model" }
storage = { path = "../../../../crates/storage" }
sparql = { path = "../../../../crates/sparql" }

# Core dependencies
parking_lot = "0.12"
thiserror = "1.0"
serde_json = "1.0"

[build-dependencies]
napi-build = "=2.0.0"  # Pin to exact version for Rust 1.87 compatibility
